# z-valkey-search

./: .bazelrc  .bazelrc_local  .clang-format  .clang-tidy  .clangd  .gitignore  00-RELEASENOTES  BACKPORTING.md  BUILD  BUILD_cmake.md  CMakeLists.txt  COMMANDS.md  COMPATIBILITY.md  CONTRIBUTING.md  DEVELOPER.md  EXTENDED_LIST.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  MEMORY_VS_RAW_DATA_ANALYSIS.md  MODULE.bazel  NOTES.md  PATRICIA_TREE_MEMORY_ANALYSIS.md  QUICK_START.md  README.md  TAG_INDEX_FIXED_DATASET_ANALYSIS.md  TAG_INDEX_MEMORY_ANALYSIS.md  TAG_INDEX_MEMORY_SCENARIOS.md  analyze_rdb_structure.py  build.sh  comprehensive_benchmark_results_20250723_213937.csv  comprehensive_benchmark_results_20250723_221229.csv  corrupt_key_to_id_map.py  corrupt_valkey_search_index.py  distributions_XLarge_GroupBased_2M_20250723_223609.json  distributions_Zipf_Distribution_1M_20250723_223928.json  generate_overhead_analysis.py  generate_tag_memory_graphs.py  hnsw-vector-index-delete-flow.md  hnsw-vector-index-insert-flow.md  (+5 more)
src/: BUILD  CMakeLists.txt  acl.cc  acl.h  attribute.h  attribute_data_type.cc  attribute_data_type.h  index_schema.cc  index_schema.h  index_schema.proto  keyspace_event_manager.cc  keyspace_event_manager.h  metrics.h  module_loader.cc  rdb_io_stream.h  rdb_section.proto  rdb_serialization.cc  rdb_serialization.h  schema_manager.cc  schema_manager.h  server_events.cc  server_events.h  valkey_search.cc  valkey_search.h  valkey_search_options.cc  valkey_search_options.h  vector_externalizer.cc  vector_externalizer.h  version.h
src/commands/: BUILD  CMakeLists.txt  commands.cc  commands.h  filter_parser.cc  filter_parser.h  ft._debug.json  ft._list.json  ft.aggregate.json  ft.create.json  ft.dropindex.json  ft.info.json  ft.search.json  ft_aggregate.cc  ft_aggregate.h  ft_aggregate_exec.cc  ft_aggregate_exec.h  ft_aggregate_parser.cc  ft_aggregate_parser.h  ft_create.cc  ft_create_parser.cc  ft_create_parser.h  ft_debug.cc  ft_dropindex.cc  ft_info.cc  ft_info_parser.cc  ft_info_parser.h  ft_internal_update.cc  ft_list.cc  ft_search.cc  ft_search.h  ft_search_parser.cc  ft_search_parser.h
src/coordinator/: BUILD  CMakeLists.txt  client.cc  client.h  client_pool.h  coordinator.proto  grpc_suspender.cc  grpc_suspender.h  info_converter.cc  info_converter.h  metadata_manager.cc  metadata_manager.h  search_converter.cc  search_converter.h  server.cc  server.h  util.h
src/expr/: CMakeLists.txt  expr.cc  expr.h  value.cc  value.h
src/indexes/: BUILD  CMakeLists.txt  index_base.h  numeric.cc  numeric.h  tag.cc  tag.h  text.cc  text.h  text_index.h  vector_base.cc  vector_base.h  vector_flat.cc  vector_flat.h  vector_hnsw.cc  vector_hnsw.h
src/metrics/: CMakeLists.txt  cpu_caps.cc  cpu_caps.h  metrics.h  metrics_dispatch.cc  metrics_internal.h
src/query/: BUILD  CMakeLists.txt  cluster_info_fanout_operation.cc  cluster_info_fanout_operation.h  fanout.cc  fanout.h  fanout_operation_base.h  fanout_template.h  planner.cc  planner.h  predicate.cc  predicate.h  primary_info_fanout_operation.cc  primary_info_fanout_operation.h  response_generator.cc  response_generator.h  search.cc  search.h
src/simd_metrics/: CMakeLists.txt  cpu_caps.cc  cpu_caps.h  simd_dispatch.cc  simd_internal.h  simd_metrics.h
src/utils/: BUILD  CMakeLists.txt  allocator.cc  allocator.h  cancel.cc  cancel.h  inlined_priority_queue.h  intrusive_list.h  intrusive_ref_count.h  lru.h  patricia_tree.h  scanner.h  segment_tree.h  string_interning.cc  string_interning.h
submodules/: CMakeLists.txt  package-submodules.sh
testing/: BUILD  CMakeLists.txt  acl_test.cc  attribute_data_type_test.cc  common.cc  common.h  cpu_caps_test.cc  extended_neighbors_integration_test.cc  extended_neighbors_test.cc  filter_test.cc  flat_position_map_test.cc  force_reindex_vector_rdb_load.cc  ft_aggregate_exec_test.cc  ft_aggregate_parser_test.cc  ft_create_parser_test.cc  ft_create_test.cc  ft_dropindex_test.cc  ft_info_test.cc  ft_list_test.cc  ft_search_parser_test.cc  ft_search_test.cc  hnsw_allow_replace_deleted_test.cc  index_schema_test.cc  index_schema_test_w_skip.cc  keyspace_event_manager_test.cc  lexer_test.cc  memory_benchmark_test.cc  memory_test_runner.py  metrics_avx2_test.cc  metrics_avx512_test.cc  metrics_dispatch_test.cc  metrics_scalar_test.cc  multi_exec_test.cc  numeric_index_test.cc  posting_test.cc  proto_package_rename_compatibility.cc  proto_package_rename_compatibility.h  radix_test.cc  rdb_io_stream_test.cc  rdb_serialization_test.cc  (+10 more)
testing/commands/: ft_internal_update_test.cc
testing/coordinator/: BUILD  CMakeLists.txt  client_test.cc  common.h  metadata_manager_test.cc
testing/expr/: CMakeLists.txt  expr_test.cc  value_test.cc
testing/integration/: .gitignore  BUILD  CMakeLists.txt  reindex_vector_on_rdb_load.py  requirements.txt  run.sh  stability_runner.py  stability_test.py  utils.py  vector_search_integration_test.py
testing/query/: BUILD  CMakeLists.txt  fanout_test.cc  response_generator_test.cc
testing/utils/: BUILD  CMakeLists.txt  allocator_test.cc  intrusive_list_test.cc  intrusive_ref_count_test.cc  lru_test.cc  patricia_tree_test.cc  scanner_test.cc  segment_tree_test.cc  string_interning_test.cc
vmsdk/src/: BUILD  CMakeLists.txt  blocked_client.cc  blocked_client.h  cluster_map.cc  cluster_map.h  command_parser.h  concurrency.cc  concurrency.h  debug.cc  debug.h  info.cc  info.h  latency_sampler.h  log.cc  log.h  managed_pointers.h  memory_allocation.cc  memory_allocation.h  memory_allocation_overrides.cc  memory_allocation_overrides.h  memory_tracker.cc  memory_tracker.h  module.cc  module.h  module_config.cc  module_config.h  module_type.cc  module_type.h  redismodule.h  sharded_atomic.h  thread_monitoring.cc  thread_monitoring.h  thread_pool.cc  thread_pool.h  thread_safe_vector.h  time_sliced_mrmw_mutex.cc  time_sliced_mrmw_mutex.h  type_conversions.h  utils.cc  (+2 more)
vmsdk/testing/: BUILD  CMakeLists.txt  blocked_client_test.cc  cluster_map_test.cc  command_parser_test.cc  concurrency_test.cc  configuration_test.cc  log_test.cc  memory_allocation_test.cc  (+6 more)
(+212 files in other folders)
